syntax = "proto3";
package proto;

import "general.proto";
import "service.proto";
import "volume.proto";

service StatefulSet {
    rpc CreateDaemonSet (StatefulSetService) returns (ServiceResponse) {}
    rpc DeleteDaemonSet  (StatefulSetService) returns (ServiceResponse) {}
    rpc GetDaemonSet (StatefulSetService) returns (ServiceResponse) {}
    rpc PatchDaemonSet  (StatefulSetService) returns (ServiceResponse) {}
    rpc PutDaemonSet (StatefulSetService) returns (ServiceResponse) {}
}

message StatefulSetService {
    string project_id = 1;
    string service_id = 2;
    string name = 3;
    string version = 4;
    string service_type = 5;
    string service_sub_type = 6;
    string namespace = 7;
    string token = 8;
    string company_id = 9;
    StatefulSetServiceAttributes service_attributes = 10;
}

message StatefulSetServiceAttributes {
    map<string, string> labels = 1;
    map<string, string> annotations = 2;
    LabelSelectorObj label_selector = 3;
    Replicas replicas = 4;
    RevisionHistoryLimit revisionHistoryLimit = 5;
    StateFulSetUpdateStrategy updateStrategy = 6;
    map<string, ContainerAttributes> containers = 7;
    map<string, ContainerAttributes> initContainers = 8;
    map<string, string> node_selector = 9;
    IstioConfig istio_config = 10;
    bool is_rbac_enabled = 11;
    repeated K8sRbacAttribute roles= 12;
    repeated IstioRbacAttribute istio_roles = 13;
    repeated Volume volumes = 14;

}